--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "author": "gbruins@ymail.com",
   "private": true,
   "scripts": {
-    "dev-OLD": "node build/dev-server.js",
     "start:dev": "NODE_ENV=development node --require dotenv/config server/start.js",
     "start": "NODE_ENV=production node --require dotenv/config server/start.js",
     "build": "node build/build.js",
-    "dev": "NODE_ENV=development node server/start.js",
     "unit": "cross-env BABEL_ENV=test karma start test/client/unit/karma.conf.js --single-run",
     "e2e": "node test/client/e2e/runner.js",
-    "test": "npm run unit && npm run e2e",
+    "test:client": "npm run unit && npm run e2e",
+    "test:server": "lab -a code -t 100 -v",
     "lint": "eslint --ext .js,.vue src test/client/unit/specs test/client/e2e/specs"
   },
   "dependencies": {
