--- a/package.json
+++ b/package.json
@@ -39,7 +39,12 @@
     "joi": "10.4.1",
     "jsonwebtoken": "7.4.0",
     "knex": "0.12.6",
-    "lodash": "4.17.4",
+    "lodash.foreach": "4.5.0",
+    "lodash.isarray": "4.0.0",
+    "lodash.isequal": "4.5.0",
+    "lodash.isfinite": "3.3.2",
+    "lodash.isobject": "3.0.2",
+    "lodash.isstring": "4.0.1",
     "mailcomposer": "4.0.0",
     "mailgun-js": "0.7.15",
     "path": "0.12.7",
@@ -102,10 +107,12 @@
     "lolex": "1.5.2",
     "mocha": "3.3.0",
     "nightwatch": "0.9.12",
+    "node-sass": "4.5.2",
     "optimize-css-assets-webpack-plugin": "1.3.0",
     "phantomjs-prebuilt": "2.1.14",
     "promise-polyfill": "6.0.2",
     "rimraf": "2.6.0",
+    "sass-loader": "6.0.3",
     "selenium-server": "3.0.1",
     "semver": "5.3.0",
     "sinon": "2.1.0",
