--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "mailgun-js": "0.7.15",
     "path": "0.12.7",
     "pg": "6.1.2",
+    "query-string": "4.3.4",
     "uuid": "3.0.1",
     "vue": "2.3.0",
     "vue-bulma-modal": "1.0.1",
