--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: node_js
+
+sudo: false
+
 node_js:
   - "6"
 
@@ -20,3 +23,18 @@ install:
   - knex migrate:latest
   - knex seed:run
 
+# https://github.com/travis-ci/travis-ci/issues/4771
+env:
+  - CXX=g++-4.8
+
+# https://github.com/travis-ci/travis-ci/issues/4771
+addons:
+  apt:
+    sources:
+    - ubuntu-toolchain-r-test
+    packages:
+    - gcc-4.8
+    - g++-4.8
+
+notifications:
+  email: false
