--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,8 @@ env:
   - NODE_ENV="development"
 
 before_script:
-  - psql -c 'create database travis_ci_test;' -U postgres
+  - psql -c "CREATE USER skateparks WITH PASSWORD 'skateparks';" -U postgres
+  - psql -c 'create database travis_ci_test;' -U skateparks
 
 before_install:
   - npm install knex
