--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 
-sudo: false
+sudo: true
 
 node_js:
   - "6"
@@ -12,7 +12,7 @@ env:
   - NODE_ENV="development"
 
 before_script:
-  - psql -c 'create database travis_ci_test;' -U postgres
+  - psql -c 'create database gmnst_test;' -U postgres
 
 before_install:
   - npm install -g knex
