--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "test:client": "npm run unit && npm run e2e",
     "test:server": "lab -a code -t 100 -v",
     "test": "npm run test:client && npm run test:server",
-    "lint": "eslint --ext .js,.vue src test/client/unit/specs test/client/e2e/specs"
+    "lint": "eslint --ext .js,.vue src test/client/unit/specs test/client/e2e/specs",
+    "knex-migrate": "node --require dotenv/config node_modules/knex/bin/cli.js migrate:latest",
+    "knex-seed": "node --require dotenv/config node_modules/knex/bin/cli.js seed:run"
   },
   "dependencies": {
     "animate.css": "3.5.2",
