--- a/.travis.yml
+++ b/.travis.yml
@@ -12,16 +12,16 @@ env:
   - NODE_ENV="development"
 
 before_script:
-  - psql -c 'create database gmnst_test;' -U postgres
+  - psql -c 'create database gmnst;' -U postgres
 
-before_install:
-  - npm install -g knex
+#before_install:
+#  - npm install -g knex
 
 install:
   - export NODE_ENV=development
   - npm install
-  - knex migrate:latest
-  - knex seed:run
+  - npm run knex-migrate
+  - npm run knex-seed
 
 # https://github.com/travis-ci/travis-ci/issues/4771
 env:
