--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ env:
   - NODE_ENV="development"
 
 before_script:
-  - psql -c 'create database gmnst;' -U postgres
+  - psql -c 'create database travis_ci_test;' -U postgres
 
 #before_install:
 #  - npm install -g knex
