--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
   - export NODE_ENV=development
   - npm install
 
-after_success:
+after_script:
   - npm run knex-migrate
   - npm run knex-seed
 
