--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,7 @@ node_js:
 services:
   - postgresql
 
-before_script:
-  - psql -c 'create database travis_ci_test;' -U postgres
+
 
 #before_install:
 #  - npm install -g knex
@@ -18,9 +17,13 @@ install:
   - export NODE_ENV=development
   - npm install
 
-after_script:
+before_script:
+  - psql -c 'create database travis_ci_test;' -U postgres
   - npm run knex-migrate
   - npm run knex-seed
+
+#after_script:
+
 
 # https://github.com/travis-ci/travis-ci/issues/4771
 env:
