updating package.json so heroku can build

--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "test:client": "npm run unit && npm run e2e",
     "test:server": "lab -a code -t 100 -v",
     "test2": "npm run test:client && npm run test:server",
-    "lint": "eslint --ext .js,.vue src test/client/unit/specs test/client/e2e/specs",
     "knex-migrate": "node --require dotenv/config node_modules/knex/bin/cli.js migrate:latest",
-    "knex-seed": "node --require dotenv/config node_modules/knex/bin/cli.js seed:run"
+    "knex-seed": "node --require dotenv/config node_modules/knex/bin/cli.js seed:run",
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "animate.css": "3.5.2",
@@ -33,10 +33,21 @@
     "boom": "4.3.1",
     "braintree": "2.0.2",
     "bulma": "0.3.2",
+    "child_process": "1.0.2",
+    "compression-webpack-plugin": "0.4.0",
     "confidence": "3.0.2",
+    "copy-webpack-plugin": "4.0.1",
     "crumb": "6.0.3",
     "email-templates": "2.5.4",
     "es6-promise": "4.1.0",
+    "eslint": "3.14.1",
+    "eslint-config-standard": "6.2.1",
+    "eslint-friendly-formatter": "2.0.7",
+    "eslint-loader": "1.6.1",
+    "eslint-plugin-html": "2.0.0",
+    "eslint-plugin-promise": "3.4.0",
+    "eslint-plugin-standard": "2.0.1",
+    "extract-text-webpack-plugin": "2.0.0",
     "font-awesome": "4.7.0",
     "glue": "4.1.0",
     "good": "7.1.0",
@@ -48,6 +59,7 @@
     "hapi-auth-jwt2": "7.2.4",
     "hapi-bookshelf-models": "2.0.0",
     "hoek": "4.1.1",
+    "html-webpack-plugin": "2.28.0",
     "inert": "4.2.0",
     "joi": "10.4.1",
     "jsonwebtoken": "7.4.0",
@@ -59,18 +71,28 @@
     "lodash.isstring": "4.0.1",
     "mailcomposer": "4.0.0",
     "mailgun-js": "0.7.15",
+    "optimize-css-assets-webpack-plugin": "1.3.0",
     "path": "0.12.7",
     "pg": "6.1.2",
     "query-string": "4.3.4",
+    "rimraf": "2.6.0",
+    "semver": "5.3.0",
+    "url-loader": "0.5.7",
     "uuid": "3.0.1",
     "vue": "2.3.0",
     "vue-bulma-modal": "1.0.1",
     "vue-bulma-notification": "1.1.1",
     "vue-i18n": "6.1.1",
+    "vue-loader": "12.0.0",
     "vue-router": "2.5.0",
+    "vue-style-loader": "3.0.0",
+    "vue-template-compiler": "2.3.0",
     "vuex": "2.2.1",
     "vuex-persistedstate": "1.4.1",
     "vuex-router-sync": "4.1.0",
+    "webpack": "2.2.1",
+    "webpack-bundle-analyzer": "2.2.1",
+    "webpack-merge": "2.6.1",
     "winston": "2.3.1"
   },
   "devDependencies": {
@@ -86,25 +108,15 @@
     "chai": "3.5.0",
     "chromedriver": "2.27.2",
     "code": "4.0.0",
-    "copy-webpack-plugin": "4.0.1",
     "cross-env": "3.1.4",
     "cross-spawn": "5.0.1",
     "css-loader": "0.26.1",
     "dotenv": "4.0.0",
-    "eslint": "3.14.1",
-    "eslint-config-standard": "6.2.1",
-    "eslint-friendly-formatter": "2.0.7",
-    "eslint-loader": "1.6.1",
-    "eslint-plugin-html": "2.0.0",
-    "eslint-plugin-promise": "3.4.0",
-    "eslint-plugin-standard": "2.0.1",
     "eventsource-polyfill": "0.9.6",
-    "extract-text-webpack-plugin": "2.0.0",
     "faker": "3.1.0",
     "file-loader": "0.10.0",
     "friendly-errors-webpack-plugin": "1.1.3",
     "hapi-webpack-plugin": "2.0.0",
-    "html-webpack-plugin": "2.28.0",
     "inject-loader": "2.0.1",
     "karma": "1.4.1",
     "karma-coverage": "1.1.1",
@@ -120,23 +132,13 @@
     "mocha": "3.3.0",
     "nightwatch": "0.9.12",
     "node-sass": "4.5.2",
-    "optimize-css-assets-webpack-plugin": "1.3.0",
     "phantomjs-prebuilt": "2.1.14",
     "promise-polyfill": "6.0.2",
-    "rimraf": "2.6.0",
     "sass-loader": "6.0.3",
     "selenium-server": "3.0.1",
-    "semver": "5.3.0",
     "sinon": "2.1.0",
     "sinon-chai": "2.9.0",
-    "sinon-stub-promise": "4.0.0",
-    "url-loader": "0.5.7",
-    "vue-loader": "12.0.0",
-    "vue-style-loader": "3.0.0",
-    "vue-template-compiler": "2.3.0",
-    "webpack": "2.2.1",
-    "webpack-bundle-analyzer": "2.2.1",
-    "webpack-merge": "2.6.1"
+    "sinon-stub-promise": "4.0.0"
   },
   "engines": {
     "node": "7.2.1",
