--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "test:client": "npm run unit && npm run e2e",
     "test:server": "lab -a code -t 100 -v",
     "test2": "npm run test:client && npm run test:server",
-    "knex-migrate": "node --require dotenv/config node_modules/knex/bin/cli.js migrate:latest",
-    "knex-seed": "node --require dotenv/config node_modules/knex/bin/cli.js seed:run",
+    "knex-migrate": "node node_modules/knex/bin/cli.js migrate:latest",
+    "knex-seed": "node node_modules/knex/bin/cli.js seed:run",
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
