--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "joi": "10.4.1",
     "jsonwebtoken": "7.4.0",
     "knex": "0.12.6",
+    "lodash.clonedeep": "4.5.0",
     "lodash.foreach": "4.5.0",
     "lodash.isequal": "4.5.0",
     "lodash.isfinite": "3.3.2",
