--- a/package.json
+++ b/package.json
@@ -120,7 +120,6 @@
     "dotenv": "4.0.0",
     "eventsource-polyfill": "0.9.6",
     "friendly-errors-webpack-plugin": "1.1.3",
-    "hapi-webpack-plugin": "2.0.0",
     "karma": "1.4.1",
     "karma-coverage": "1.1.1",
     "karma-mocha": "1.3.0",
@@ -139,7 +138,9 @@
     "selenium-server": "3.0.1",
     "sinon": "2.1.0",
     "sinon-chai": "2.9.0",
-    "sinon-stub-promise": "4.0.0"
+    "sinon-stub-promise": "4.0.0",
+    "webpack-dev-middleware": "1.10.2",
+    "webpack-hot-middleware": "2.18.0"
   },
   "engines": {
     "node": "7.2.1",
