--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "copy-webpack-plugin": "4.0.1",
     "crumb": "6.0.3",
     "css-loader": "0.26.1",
+    "element-ui": "1.3.7",
     "email-templates": "2.5.4",
     "es6-promise": "4.1.0",
     "eslint": "3.14.1",
@@ -97,9 +98,9 @@
     "semver": "5.3.0",
     "url-loader": "0.5.7",
     "uuid": "3.0.1",
+    "vee-validate": "2.0.0-rc.6",
     "vue": "2.3.0",
     "vue-bulma-modal": "1.0.1",
-    "vue-bulma-notification": "1.1.1",
     "vue-i18n": "6.1.1",
     "vue-loader": "12.0.0",
     "vue-router": "2.5.0",
@@ -115,6 +116,7 @@
   },
   "devDependencies": {
     "autoprefixer": "6.7.2",
+    "babel-plugin-component": "0.9.1",
     "chai": "3.5.0",
     "chromedriver": "2.27.2",
     "code": "4.0.0",
