shopping cart updates

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "scripts": {
     "start:dev": "NODE_ENV=development node --require dotenv/config server/start.js",
     "start:stage": "NODE_ENV=staging node --require dotenv/config server/start.js",
+    "start:localprod": "NODE_ENV=production node --require dotenv/config server/start.js",
     "start": "NODE_ENV=production node server/start.js",
     "build": "node build/build.js",
     "unit": "cross-env BABEL_ENV=test karma start test/client/unit/karma.conf.js --single-run",
