--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "bookshelf-uuid": "1.0.0",
     "boom": "4.3.1",
     "braintree": "2.0.2",
+    "braintree-web": "3.19.0",
     "bulma": "0.3.2",
     "child_process": "1.0.2",
     "compression-webpack-plugin": "0.4.0",
