--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "vee-validate": "2.0.0-rc.6",
     "vue": "2.3.0",
     "vue-bulma-modal": "1.0.1",
+    "vue-carousel": "0.6.4",
     "vue-i18n": "6.1.1",
     "vue-loader": "12.0.0",
     "vue-router": "2.7.0",
