--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "rimraf": "2.6.0",
     "sass-loader": "6.0.3",
     "semver": "5.3.0",
+    "shippo": "1.3.0",
     "url-loader": "0.5.7",
     "uuid": "3.0.1",
     "vee-validate": "2.0.0-rc.6",
