--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "vue-router": "2.7.0",
     "vue-style-loader": "3.0.0",
     "vue-template-compiler": "2.3.0",
+    "vuelidate": "0.5.0",
     "vuex": "2.2.1",
     "vuex-persistedstate": "1.4.1",
     "vuex-router-sync": "4.1.0",
