--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "compression-webpack-plugin": "0.4.0",
     "confidence": "3.0.2",
     "copy-webpack-plugin": "4.0.1",
+    "country-data": "0.0.31",
     "crumb": "6.0.3",
     "css-loader": "0.26.1",
     "element-ui": "1.3.7",
