--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "country-data": "0.0.31",
     "crumb": "6.0.3",
     "css-loader": "0.26.1",
-    "element-ui": "1.3.7",
+    "element-ui": "1.4.1",
     "email-templates": "2.5.4",
     "es6-promise": "4.1.0",
     "eslint": "3.14.1",
@@ -118,7 +118,8 @@
     "webpack": "2.2.1",
     "webpack-bundle-analyzer": "2.2.1",
     "webpack-merge": "2.6.1",
-    "winston": "2.3.1"
+    "winston": "2.3.1",
+    "wreck": "12.2.2"
   },
   "devDependencies": {
     "autoprefixer": "6.7.2",
