Lots of updates

--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "test2": "npm run test:client && npm run test:server",
     "knex:migrate": "node node_modules/knex/bin/cli.js migrate:latest",
     "knex:seed": "node node_modules/knex/bin/cli.js seed:run",
+    "knex:migrate:dev": "node --require dotenv/config node_modules/knex/bin/cli.js migrate:latest",
+    "knex:seed:dev": "node --require dotenv/config node_modules/knex/bin/cli.js seed:run",
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
