--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,13 +3,8 @@
 # https://hub.docker.com/r/library/node/tags/
 image: node:latest
 
-# Pick zero or more services to be used on all builds.
-# Only needed when using a docker container to run your tests in.
-# Check out: http://docs.gitlab.com/ce/ci/docker/using_docker_images.html#what-is-a-service
-services:
-  #- mysql:latest
-  #- redis:latest
-  - postgres:latest
+stages:
+  - test
 
 # This folder is cached between builds
 # http://docs.gitlab.com/ce/ci/yaml/README.html#cache
@@ -18,9 +13,25 @@ cache:
   - node_modules/
 
 test_async:
+  stage: test
   script:
    - npm install
-   - node ./specs/start.js ./specs/async.spec.js
+   - npm run knex:migrate
+   - npm run knex:seed
+  #  - node ./specs/start.js ./specs/async.spec.js
+   - npm run unit
+  tags:
+    - docker
+
+# test_db:
+#   stage: test
+#   services:
+#     - postgres:9.5.0
+#   script:
+#    - npm install
+#    - node ./specs/start.js ./specs/db-postgres.spec.js
+#   tags:
+#     - docker
 
 #test_db:
 #  script:
