--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,12 +21,12 @@ cache:
   paths:
   - node_modules/
 
-connect:
-  image: postgres
-  script:
+# connect:
+  # image: postgres
+  # script:
   # official way to provide password to psql: http://www.postgresql.org/docs/9.3/static/libpq-envars.html
-  - export PGPASSWORD=$POSTGRES_PASSWORD
-  - psql -h "postgres" -U "$POSTGRES_USER" -d "$POSTGRES_DB" -c "SELECT 'OK' AS status;"
+  # - export PGPASSWORD=$POSTGRES_PASSWORD
+  # - psql -h "postgres" -U "$POSTGRES_USER" -d "$POSTGRES_DB" -c "SELECT 'OK' AS status;"
 
 test_server:
   stage: test
@@ -37,6 +37,8 @@ test_server:
 
   script:
   #  - node ./specs/start.js ./specs/async.spec.js
+    - export PGPASSWORD=$POSTGRES_PASSWORD
+    - psql -h "postgres" -U "$POSTGRES_USER" -d "$POSTGRES_DB" -c "SELECT 'OK' AS status;"
     - npm install
     - npm run knex:migrate
     - npm run knex:seed
