--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,9 +30,9 @@ cache:
 
 test_server:
   stage: test
-  # services:
-  #   - postgres:9.6.2-alpine
-  image: postgres:9.6.2-alpine
+  services:
+    - postgres:9.6.2-alpine
+  image: node:6.11
   variables:
     DATABASE_URL: "postgresql://postgres:postgres@postgres:5432/$POSTGRES_DB"
   script:
