--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,7 +39,7 @@ test_server:
     #- node ./specs/start.js ./specs/async.spec.js
     #- export PGPASSWORD=$POSTGRES_PASSWORD
     #- psql -h "postgres" -U "$POSTGRES_USER" -d "$POSTGRES_DB" -c "SELECT 'OK' AS status;"
-    - npm install
+    - npm install --quiet
     - npm run knex:migrate
     - npm run knex:seed
     - npm run test:server
