--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,9 +30,12 @@ cache:
 
 test_server:
   stage: test
+  # services:
+  #   - postgres:9.6.2-alpine
+  # image: node:6.11
   services:
-    - postgres:9.6.2-alpine
-  image: node:6.11
+    - node:6.11
+  image: postgres:9.6.2-alpine
   variables:
     DATABASE_URL: "postgresql://postgres:postgres@postgres:5432/$POSTGRES_DB"
   script:
