--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,8 @@ variables:
   POSTGRES_DB: gmnst_test
   POSTGRES_USER: postgres
   POSTGRES_PASSWORD: postgres
-  DATABASE_URL: "postgres://postgres@postgres/gmnst_test"
+  # DATABASE_URL: "postgres://postgres@postgres/gmnst_test"
+  DATABASE_URL: "postgresql://postgres:postgres@postgres:5432/$POSTGRES_DB"
 
 stages:
   - test
@@ -30,11 +31,11 @@ cache:
 
 test_server:
   stage: test
-  # services:
-  #   - postgres:9.6.2-alpine
-  # image: postgres:9.6.2-alpine
-  variables:
-    DATABASE_URL: "postgresql://postgres:postgres@postgres:5432/$POSTGRES_DB"
+  services:
+    - postgres:9.6.2-alpine
+  image: node:6.11
+  # variables:
+  #   DATABASE_URL: "postgresql://postgres:postgres@postgres:5432/$POSTGRES_DB"
   script:
     - export PGPASSWORD=$POSTGRES_PASSWORD
     - psql -h "postgres" -U "$POSTGRES_USER" -d "$POSTGRES_DB" -c "SELECT 'OK' AS status;"
