--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,18 +22,18 @@ cache:
   paths:
   - node_modules/
 
-# connect:
-  # image: postgres
-  # script:
+connect:
+  image: postgres
+  script:
   # official way to provide password to psql: http://www.postgresql.org/docs/9.3/static/libpq-envars.html
-  # - export PGPASSWORD=$POSTGRES_PASSWORD
-  # - psql -h "postgres" -U "$POSTGRES_USER" -d "$POSTGRES_DB" -c "SELECT 'OK' AS status;"
+  - export PGPASSWORD=$POSTGRES_PASSWORD
+  - psql -h "postgres" -U "$POSTGRES_USER" -d "$POSTGRES_DB" -c "SELECT 'OK' AS status;"
 
 test_server:
   stage: test
+  image: node:6.11
   services:
     - postgres:9.6.2-alpine
-  image: node:6.11
   # variables:
   #   DATABASE_URL: "postgresql://postgres:postgres@postgres:5432/$POSTGRES_DB"
   script:
