--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,8 +13,8 @@ variables:
   # DATABASE_URL: "postgres://postgres@postgres/gmnst_test"
   DATABASE_URL: "postgresql://postgres:postgres@postgres:5432/$POSTGRES_DB"
 
-stages:
-  - test
+# stages:
+#   - test
 
 # This folder is cached between builds
 # http://docs.gitlab.com/ce/ci/yaml/README.html#cache
@@ -23,26 +23,26 @@ cache:
   - node_modules/
 
 connect:
-  image: postgres:9.6.2-alpine
+  # image: postgres:9.6.2-alpine
   script:
   # official way to provide password to psql: http://www.postgresql.org/docs/9.3/static/libpq-envars.html
   - export PGPASSWORD=$POSTGRES_PASSWORD
   - psql -h "postgres" -U "$POSTGRES_USER" -d "$POSTGRES_DB" -c "SELECT 'OK' AS status;"
 
-test_server:
-  stage: test
-  image: node:6.11
-  services:
-    - postgres:9.6.2-alpine
-  # variables:
-  #   DATABASE_URL: "postgresql://postgres:postgres@postgres:5432/$POSTGRES_DB"
-  script:
-    # - export PGPASSWORD=$POSTGRES_PASSWORD
-    # - psql -h "postgres" -U "$POSTGRES_USER" -d "$POSTGRES_DB" -c "SELECT 'OK' AS status;"
-    - npm install --quiet
-    - npm run knex:migrate
-    - npm run knex:seed
-    - npm run test:server
+# test_server:
+#   stage: test
+#   image: node:6.11
+#   services:
+#     - postgres:9.6.2-alpine
+#   # variables:
+#   #   DATABASE_URL: "postgresql://postgres:postgres@postgres:5432/$POSTGRES_DB"
+#   script:
+#     # - export PGPASSWORD=$POSTGRES_PASSWORD
+#     # - psql -h "postgres" -U "$POSTGRES_USER" -d "$POSTGRES_DB" -c "SELECT 'OK' AS status;"
+#     - npm install --quiet
+#     - npm run knex:migrate
+#     - npm run knex:seed
+#     - npm run test:server
 
 # test_db:
 #   stage: test
