--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,6 +24,9 @@ cache:
 
 connect:
   # image: postgres:9.6.2-alpine
+  image: node:6.11
+  services:
+    - postgres:9.6.2-alpine
   script:
   # official way to provide password to psql: http://www.postgresql.org/docs/9.3/static/libpq-envars.html
   - export PGPASSWORD=$POSTGRES_PASSWORD
