--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,8 +28,8 @@ connect:
   # services:
   #   - postgres:9.6.2-alpine
   image: postgres:9.6.2-alpine
-  services:
-  - node:6.11
+  # services:
+  # - node:6.11
   script:
   # official way to provide password to psql: http://www.postgresql.org/docs/9.3/static/libpq-envars.html
   - export PGPASSWORD=$POSTGRES_PASSWORD
