--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,9 @@
+# https://hub.docker.com/r/library/node/tags/
+image: node:6.11
+
 # https://hub.docker.com/r/library/postgres/tags/
 services:
   - postgres:9.6.2-alpine
-
-# https://hub.docker.com/r/library/node/tags/
-image: node:6.11
 
 variables:
   # Configure postgres service (https://hub.docker.com/_/postgres/)
@@ -18,24 +18,22 @@ variables:
 
 # This folder is cached between builds
 # http://docs.gitlab.com/ce/ci/yaml/README.html#cache
-cache:
-  paths:
-  - node_modules/
+# cache:
+#   paths:
+#   - node_modules/
 
 connect:
   # image: postgres:9.6.2-alpine
   # image: node:6.11
   # services:
   #   - postgres:9.6.2-alpine
-  image: postgres:9.6.2-alpine
+  # image: postgres:9.6.2-alpine
   # services:
   # - node:6.11
   script:
   # official way to provide password to psql: http://www.postgresql.org/docs/9.3/static/libpq-envars.html
   - export PGPASSWORD=$POSTGRES_PASSWORD
   - psql -h "postgres" -U "$POSTGRES_USER" -d "$POSTGRES_DB" -c "SELECT 'OK' AS status;"
-  - npm install --quiet
-  - npm run knex:migrate
 
 # test_server:
 #   stage: test
