--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,10 +40,12 @@ connect:
 
 build:
   stage: build
+  services:
+    - postgres:9.5.0
   script:
-  - npm install --quiet
-  - npm run knex:migrate
-  - npm run knex:seed
+    - npm install --quiet
+    - npm run knex:migrate
+    - npm run knex:seed
 
 test_server:
   stage: test
@@ -51,10 +53,6 @@ test_server:
   # services:
     # - postgres:9.6.2-alpine
   variables:
-    PG_HOST: postgresql
-    PG_USER: $POSTGRES_USER
-    PG_PASSWORD: $POSTGRES_PASSWORD
-    PG_PORT: 5432
     DATABASE_URL: "postgresql://postgres:postgres@postgres:5432/$POSTGRES_DB"
   script:
   - npm run test:server
