--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,9 +34,9 @@ connect:
   # services:
   # - node:6.11
   script:
-  # official way to provide password to psql: http://www.postgresql.org/docs/9.3/static/libpq-envars.html
-  - export PGPASSWORD=$POSTGRES_PASSWORD
-  - psql -h "postgres" -U "$POSTGRES_USER" -d "$POSTGRES_DB" -c "SELECT 'OK' AS status;"
+    # official way to provide password to psql: http://www.postgresql.org/docs/9.3/static/libpq-envars.html
+    - export PGPASSWORD=$POSTGRES_PASSWORD
+    - psql -h "postgres" -U "$POSTGRES_USER" -d "$POSTGRES_DB" -c "SELECT 'OK' AS status;"
 
 build:
   stage: build
@@ -49,11 +49,11 @@ build:
 
 test_server:
   stage: test
-  # image: node:6.11
-  # services:
-    # - postgres:9.6.2-alpine
+  services:
+    - postgres:9.6.2-alpine
   variables:
-    DATABASE_URL: "postgresql://postgres:postgres@postgres:5432/$POSTGRES_DB"
+    # DATABASE_URL: "postgresql://postgres:postgres@postgres:5432/$POSTGRES_DB"
+    DATABASE_URL: "postgres://postgres@postgres/$POSTGRES_DB"
   script:
   - npm run test:server
 
