--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ variables:
   DATABASE_URL: "postgresql://postgres:postgres@postgres:5432/$POSTGRES_DB"
 
 stages:
-  - connect
+  # - connect
   - build
   - test
 
@@ -27,12 +27,6 @@ cache:
 connect:
   stage: connect
   image: postgres:9.6.2-alpine
-  # image: node:6.11
-  # services:
-  #   - postgres:9.6.2-alpine
-  # image: postgres:9.6.2-alpine
-  # services:
-  # - node:6.11
   script:
     # official way to provide password to psql: http://www.postgresql.org/docs/9.3/static/libpq-envars.html
     - export PGPASSWORD=$POSTGRES_PASSWORD
