--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,13 +23,13 @@ cache:
   paths:
   - node_modules/
 
-connect:
-  stage: connect
-  image: postgres:9.6.2-alpine
-  script:
-    # official way to provide password to psql: http://www.postgresql.org/docs/9.3/static/libpq-envars.html
-    - export PGPASSWORD=$POSTGRES_PASSWORD
-    - psql -h "postgres" -U "$POSTGRES_USER" -d "$POSTGRES_DB" -c "SELECT 'OK' AS status;"
+# connect:
+#   stage: connect
+#   image: postgres:9.6.2-alpine
+#   script:
+#     # official way to provide password to psql: http://www.postgresql.org/docs/9.3/static/libpq-envars.html
+#     - export PGPASSWORD=$POSTGRES_PASSWORD
+#     - psql -h "postgres" -U "$POSTGRES_USER" -d "$POSTGRES_DB" -c "SELECT 'OK' AS status;"
 
 build:
   stage: build
