--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,8 +33,8 @@ cache:
 
 build:
   stage: build
-  services:
-    - postgres:9.6.2-alpine
+  # services:
+  #   - postgres:9.6.2-alpine
   script:
     - npm install --quiet
     - npm run knex:migrate
