--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ variables:
 
 stages:
   - build
-  # - test
+  - test
 
 # This folder is cached between builds
 # http://docs.gitlab.com/ce/ci/yaml/README.html#cache
@@ -41,12 +41,12 @@ build:
     - npm run knex:seed
     - npm run test:server
 
-# test_server:
-#   stage: test
-#   services:
-#     - postgres:9.6.2-alpine
-#   script:
-#     - npm run test:server
+test_server:
+  stage: test
+  # services:
+  #   - postgres:9.6.2-alpine
+  script:
+    - npm run test:server
 
 # test_db:
 #   stage: test
