--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,13 +35,15 @@ build:
   stage: build
   script:
     - npm install --quiet
-    - npm run knex:migrate
-    - npm run knex:seed
+    # - npm run knex:migrate
+    # - npm run knex:seed
     # - npm run test:server
 
 test_server:
   stage: test
   script:
+    - npm run knex:migrate
+    - npm run knex:seed
     - npm run test:server
 
 # test_db:
