--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,8 +30,8 @@ before_script:
   - curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add -
   - apt-get update && apt-get install google-cloud-sdk
 
-after_script:
-  - rm /tmp/$CI_PIPELINE_ID.json
+# after_script:
+  # - rm /tmp/$CI_PIPELINE_ID.json
 
 # connect:
 #   stage: connect
