--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "url": "https://github.com/notoursllc/gmnst"
   },
   "scripts": {
-    "start:dev": "NODE_ENV=development node --require ./yaml_env server/start.js",
-    "start:stage": "NODE_ENV=staging node --require ./yaml_env server/start.js",
-    "start:localprod": "NODE_ENV=production node --require ./yaml_env server/start.js",
+    "start:dev": "NODE_ENV=development node server/start.js",
+    "start:stage": "NODE_ENV=staging node server/start.js",
+    "start:localprod": "NODE_ENV=production node server/start.js",
     "start": "NODE_ENV=production node server/start.js",
     "build": "node build/build.js",
     "unit": "cross-env BABEL_ENV=test karma start test/client/unit/karma.conf.js --single-run",
@@ -21,6 +21,7 @@
     "test:client": "npm run unit && npm run e2e",
     "test:server": "lab -a code -v --leaks test/server",
     "test2": "npm run test:client && npm run test:server",
+    "knex:migrate-seed": "node build/db_migrate_seed",
     "knex:migrate": "node ./node_modules/knex/bin/cli.js migrate:latest",
     "knex:seed": "node ./node_modules/knex/bin/cli.js seed:run",
     "knex:migrate:dev": "node --require ./yaml_env node_modules/knex/bin/cli.js migrate:latest",
