--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ app.yaml
 # Logs:
 *.log
 npm-debug.log*
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
