--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ variables:
 stages:
   - build
   - test
-  - deploy
+
 
 # This folder is cached between builds
 # http://docs.gitlab.com/ce/ci/yaml/README.html#cache
@@ -25,10 +25,10 @@ cache:
   paths:
   - node_modules/
 
-before_script:
-  - echo "deb http://packages.cloud.google.com/apt cloud-sdk-jessie main" | tee /etc/apt/sources.list.d/google-cloud-sdk.list
-  - curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add -
-  - apt-get update && apt-get install google-cloud-sdk
+# before_script:
+#   - echo "deb http://packages.cloud.google.com/apt cloud-sdk-jessie main" | tee /etc/apt/sources.list.d/google-cloud-sdk.list
+#   - curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add -
+#   - apt-get update && apt-get install google-cloud-sdk
 
 # after_script:
   # - rm /tmp/$CI_PIPELINE_ID.json
@@ -53,17 +53,17 @@ test_server:
     - npm run knex:seed
     - npm run test:server
 
-deploy_production:
-  stage: deploy
-  environment: Production
-  only:
-    - master
-  variables:
-    DATABASE_URL: $DATABASE_URL_PROD
-  script:
-    - echo $DEPLOY_KEY_FILE_PRODUCTION > /tmp/$CI_PIPELINE_ID.json
-    - gcloud auth activate-service-account --key-file /tmp/$CI_PIPELINE_ID.json
-    - gcloud --quiet --project $PROJECT_ID_PRODUCTION app deploy
+# deploy_production:
+#   stage: deploy
+#   environment: Production
+#   only:
+#     - master
+#   variables:
+#     DATABASE_URL: $DATABASE_URL_PROD
+#   script:
+#     - echo $DEPLOY_KEY_FILE_PRODUCTION > /tmp/$CI_PIPELINE_ID.json
+#     - gcloud auth activate-service-account --key-file /tmp/$CI_PIPELINE_ID.json
+#     - gcloud --quiet --project $PROJECT_ID_PRODUCTION app deploy
 
 # test_db:
 #   stage: test
