--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "start:stage": "NODE_ENV=staging node --require ./yaml_env server/start.js",
     "start:localprod": "NODE_ENV=production node --require ./yaml_env server/start.js",
     "start": "NODE_ENV=production node --require ./yaml_env server/start.js",
-    "build": "node build/build.js",
+    "build": "node --require ./yaml_env build/build.js",
     "unit": "cross-env BABEL_ENV=test karma start test/client/unit/karma.conf.js --single-run",
     "e2e": "node test/client/e2e/runner.js",
     "test:client": "npm run unit && npm run e2e",
@@ -31,6 +31,7 @@
     "accounting": "0.4.1",
     "animate.css": "3.5.2",
     "axios": "0.16.1",
+    "babel-plugin-component": "0.9.1",
     "babel-core": "6.22.1",
     "babel-eslint": "7.1.1",
     "babel-loader": "6.2.10",
@@ -55,6 +56,7 @@
     "country-data": "0.0.31",
     "crumb": "6.0.3",
     "css-loader": "0.26.1",
+    "dotenv": "4.0.0",
     "element-ui": "1.4.1",
     "email-templates": "2.5.4",
     "es6-promise": "4.1.0",
@@ -126,13 +128,12 @@
   },
   "devDependencies": {
     "autoprefixer": "6.7.2",
-    "babel-plugin-component": "0.9.1",
+    
     "chai": "3.5.0",
     "chromedriver": "2.27.2",
     "code": "4.0.0",
     "cross-env": "3.1.4",
     "cross-spawn": "5.0.1",
-    "dotenv": "4.0.0",
     "eventsource-polyfill": "0.9.6",
     "friendly-errors-webpack-plugin": "1.1.3",
     "karma": "1.4.1",
