--- a/package.json
+++ b/package.json
@@ -31,16 +31,16 @@
     "accounting": "0.4.1",
     "animate.css": "3.5.2",
     "axios": "0.16.1",
-    "babel-plugin-component": "0.9.1",
     "babel-core": "6.22.1",
     "babel-eslint": "7.1.1",
     "babel-loader": "6.2.10",
+    "babel-plugin-component": "0.9.1",
     "babel-plugin-istanbul": "3.1.2",
     "babel-plugin-transform-runtime": "6.22.0",
     "babel-preset-env": "1.2.1",
     "babel-preset-stage-2": "6.22.0",
     "babel-register": "6.22.0",
-    "bcrypt": "1.0.2",
+    "bcryptjs": "2.4.3",
     "bluebird": "3.5.0",
     "bookshelf": "0.10.3",
     "bookshelf-modelbase": "2.10.4",
@@ -128,7 +128,6 @@
   },
   "devDependencies": {
     "autoprefixer": "6.7.2",
-    
     "chai": "3.5.0",
     "chromedriver": "2.27.2",
     "code": "4.0.0",
