--- a/package.json
+++ b/package.json
@@ -22,10 +22,8 @@
     "test:server": "lab -a code -v --leaks test/server",
     "test2": "npm run test:client && npm run test:server",
     "knex:migrate-seed": "node build/db_migrate_seed",
-    "knex:migrate": "node ./node_modules/knex/bin/cli.js migrate:latest",
-    "knex:seed": "node ./node_modules/knex/bin/cli.js seed:run",
-    "knex:migrate:dev": "node --require ./yaml_env node_modules/knex/bin/cli.js migrate:latest",
-    "knex:seed:dev": "node --require ./yaml_env node_modules/knex/bin/cli.js seed:run"
+    "knex:migrate": "node --require ./yaml_env ./node_modules/knex/bin/cli.js migrate:latest",
+    "knex:seed": "node --require ./yaml_env ./node_modules/knex/bin/cli.js seed:run"
   },
   "dependencies": {
     "accounting": "0.4.1",
